force-app/main/default/objects/WeatherInfo__c/fields/Is_Active_Location__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Location</label>
    <type>Checkbox</type>
</CustomField>