force-app/main/default/objects/WeatherInfo__c/fields/Maximum_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Temperature__c</fullName>
    <label>Maximum Temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>