force-app/main/default/objects/WeatherInfo__c/fields/Minimum_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Temperature__c</fullName>
    <label>Minimum Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>